# electronics_shop_project1

./: .gitignore  pyproject.toml
homework-1/: main.py
homework-1/src/: main.py
homework-1/tests/: conftest.py  test_item.py
homework-2/: main.py
homework-4/: main.py
src/: item.py  keyboard.py  phone.py
tests/: conftest.py  test_item.py
